# CppMicroServices_Demo

./: CMakeLists.txt
CppMicroServices_Demo/: CMakeLists.txt  CppMicroServices_Demo.cpp  CppMicroServices_Demo.h
TmpDll/: Activator.cpp  Activator.hpp  CMakeLists.txt  ITmpDll.h  TmpDll.cpp  TmpDll.h  manifest.json
